--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
 	<artifactId>zssjsfdemo</artifactId>
 	<version>1.0.0</version>
 	<properties>
-		<zss.version>3.6.0-Eval</zss.version>
+	<!-- 
+	 		<zss.version>3.8.3-Eval</zss.version>
+	 -->
+		<zss.version>3.9.0-Eval</zss.version>
 		<jsf-api.version>2.1.7</jsf-api.version>
 		<jstl-api.version>1.2</jstl-api.version>
 		<commons-io>1.3.1</commons-io>
@@ -33,6 +36,10 @@
       		<name>ZK Evaluation Repository</name>
 			<url>http://mavensync.zkoss.org/eval</url>
 		</repository>
+	   <repository>
+	     <id>ZK EE</id>
+	     <url>https://maven.zkoss.org/repo/zk/ee</url>
+	   </repository>		
 		<repository>  
 		    <id>prime-repo</id>  
 		    <name>PrimeFaces Maven Repository</name>  
@@ -83,6 +90,11 @@
 		    <artifactId>primefaces</artifactId>  
 		    <version>3.5</version>  
 		</dependency>  
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zuljsp</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 		-->
 	</dependencies>
 	<build>
