--- a/pom.xml
+++ b/pom.xml
@@ -103,35 +103,33 @@
 		<plugins>
 			<!-- Run with Jetty -->
 			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.3.12.v20160915</version>
+			<!-- 
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.10</version>
+				<version>6.1.10</version>				
+			 -->
 				<configuration>
 					<webAppSourceDirectory>WebContent</webAppSourceDirectory>
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
 				</configuration>
-				<executions>
-					<execution>
-						<id>start-jetty</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<scanIntervalSeconds>0</scanIntervalSeconds>
-							<daemon>true</daemon>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
+			    <dependencies>
+			      <!-- to support JSF, https://www.eclipse.org/jetty/documentation/9.3.0.v20150612/configuring-jsp.html-->
+			      <dependency>
+			        <groupId>com.sun.faces</groupId>
+			        <artifactId>jsf-api</artifactId>
+			        <version>2.1.7</version>
+			      </dependency>
+			      <dependency>
+			        <groupId>com.sun.faces</groupId>
+			        <artifactId>jsf-impl</artifactId>
+			        <version>2.1.7</version>
+			     </dependency>
+			    </dependencies>
 			</plugin>
 			<!-- Compile java -->
 			<plugin>
