--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
 	<artifactId>zssjsfdemo</artifactId>
 	<version>1.0.0</version>
 	<properties>
-		<zss.version>3.9.2-SNAPSHOT</zss.version>
+	<!-- 
+	 		<zss.version>3.8.3-Eval</zss.version>
+	 -->
+		<zss.version>3.9.0-Eval</zss.version>
 		<jsf-api.version>2.1.7</jsf-api.version>
 		<jstl-api.version>1.2</jstl-api.version>
 		<commons-io>1.3.1</commons-io>
